92. Fix Lỗi ScrollBar

--- a/src/components/Admin/Admin.scss
+++ b/src/components/Admin/Admin.scss
@@ -12,6 +12,7 @@
       border: 1px solid green;
     }
     .admin-main {
+      height: calc(100vh - 40px);
     }
   }
 }
